--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desserts Shop</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
 
     <div class="container">
@@ -13,159 +15,165 @@
             <h1>Desserts</h1>
             <div class="items">
                 <div class="item" data-name="Waffle with Berries" data-price="6.50">
-                    <img src="./img/Item Image (1).png" alt="Waffle with Berries">
-                    <button class="add-to-cart">Add to Cart</button>
-                    <h3>Waffle with Berries</h3>
-                    <p class="price">$6.50</p>
-                    <div class="counter">
-                        <button class="minus">-</button>
-                        <span>1</span>
-                        <button class="plus">+</button>
+                    <div class="item-img">
+                        <img class="food-img" src="./img/Item Image.png" alt="Waffle with Berries">
+                        <button class="add-to-cart">Add to Cart</button> 
+                        <div class="counter-btn">
+                            <button class="minus">-</button>
+                            <span>1</span>
+                            <button class="plus">+</button>
+                        </div>
+                    </div>
+                    <div class="text">
+                        <h3>Waffle with Berries</h3>
+                        <p class="price">$6.50</p>
                     </div>
                 </div>
                 <div class="item" data-name="Vanilla Bean Crème Brûlée" data-price="7.00">
-                    <img src="./img/Item Image (2).png" alt="Crème Brûlée">
-                    <button class="add-to-cart">Add to Cart</button>
-                    <h3>Vanilla Bean Crème Brûlée</h3>
-                    <p class="price">$7.00</p>
-                    <div class="counter">
-                        <button class="minus">-</button>
-                        <span>1</span>
-                        <button class="plus">+</button>
+                    <div class="item-img">
+                        <img class="food-img" src="./img/Item Image (1).png" alt="Waffle with Berries">
+                        <button class="add-to-cart">Add to Cart</button> 
+                        <div class="counter-btn">
+                            <button class="minus">-</button>
+                            <span>1</span>
+                            <button class="plus">+</button>
+                        </div>
+                    </div>
+                    <div class="text">
+                        <h3>Vanilla Bean Crème Brûlée</h3>
+                        <p class="price">$7.00</p>
                     </div>
                 </div>
-                <div class="item" data-name="Waffle with Berries" data-price="6.50">
-                    <img src="./img/Item Image (1).png" alt="Waffle with Berries">
-                    <button class="add-to-cart">Add to Cart</button>
-                    <h3>Waffle with Berries</h3>
-                    <p class="price">$6.50</p>
-                    <div class="counter">
-                        <button class="minus">-</button>
-                        <span>1</span>
-                        <button class="plus">+</button>
+                <div class="item" data-name="Macaron Mix of Five" data-price="8.00">
+                    <div class="item-img">
+                        <img class="food-img" src="./img/Item Image (2).png" alt="Waffle with Berries">
+                        <button class="add-to-cart">Add to Cart</button> 
+                        <div class="counter-btn">
+                            <button class="minus">-</button>
+                            <span>1</span>
+                            <button class="plus">+</button>
+                        </div>
+                    </div>
+                    <div class="text">
+                        <h3>Macaron Mix of Five</h3>
+                        <p class="price">$8.00</p>
                     </div>
                 </div>
-                <div class="item" data-name="Vanilla Bean Crème Brûlée" data-price="7.00">
-                    <img src="./img/Item Image (2).png" alt="Crème Brûlée">
-                    <button class="add-to-cart">Add to Cart</button>
-                    <h3>Vanilla Bean Crème Brûlée</h3>
-                    <p class="price">$7.00</p>
-                    <div class="counter">
-                        <button class="minus">-</button>
-                        <span>1</span>
-                        <button class="plus">+</button>
+                <div class="item" data-name="Classic Tiramisu" data-price="5.50">
+                    <div class="item-img">
+                        <img class="food-img" src="./img/Item Image (3).png" alt="Waffle with Berries">
+                        <button class="add-to-cart">Add to Cart</button> 
+                        <div class="counter-btn">
+                            <button class="minus">-</button>
+                            <span>1</span>
+                            <button class="plus">+</button>
+                        </div>
+                    </div>
+                    <div class="text">
+                        <h3>Classic Tiramisu</h3>
+                        <p class="price">$5.50</p>
                     </div>
                 </div>
-                <div class="item" data-name="Waffle with Berries" data-price="6.50">
-                    <img src="./img/Item Image (1).png" alt="Waffle with Berries">
-                    <button class="add-to-cart">Add to Cart</button>
-                    <h3>Waffle with Berries</h3>
-                    <p class="price">$6.50</p>
-                    <div class="counter">
-                        <button class="minus">-</button>
-                        <span>1</span>
-                        <button class="plus">+</button>
+                <div class="item" data-name="Pistachio Baklava" data-price="4.00">
+                    <div class="item-img">
+                        <img class="food-img" src="./img/Item Image (4).png" alt="Waffle with Berries">
+                        <button class="add-to-cart">Add to Cart</button> 
+                        <div class="counter-btn">
+                            <button class="minus">-</button>
+                            <span>1</span>
+                            <button class="plus">+</button>
+                        </div>
+                    </div>
+                    <div class="text">
+                        <h3>Pistachio Baklava</h3>
+                        <p class="price">$4.00</p>
                     </div>
                 </div>
-                <div class="item" data-name="Vanilla Bean Crème Brûlée" data-price="7.00">
-                    <img src="./img/Item Image (2).png" alt="Crème Brûlée">
-                    <button class="add-to-cart">Add to Cart</button>
-                    <h3>Vanilla Bean Crème Brûlée</h3>
-                    <p class="price">$7.00</p>
-                    <div class="counter">
-                        <button class="minus">-</button>
-                        <span>1</span>
-                        <button class="plus">+</button>
+                <div class="item" data-name="Lemon Meringue Pie" data-price="5.00">
+                    <div class="item-img">
+                        <img class="food-img" src="./img/Item Image (5).png" alt="Waffle with Berries">
+                        <button class="add-to-cart">Add to Cart</button> 
+                        <div class="counter-btn">
+                            <button class="minus">-</button>
+                            <span>1</span>
+                            <button class="plus">+</button>
+                        </div>
+                    </div>
+                    <div class="text">
+                        <h3>Lemon Meringue Pie</h3>
+                        <p class="price">$5.00</p>
                     </div>
                 </div>
-                <div class="item" data-name="Waffle with Berries" data-price="6.50">
-                    <img src="./img/Item Image (1).png" alt="Waffle with Berries">
-                    <button class="add-to-cart">Add to Cart</button>
-                    <h3>Waffle with Berries</h3>
-                    <p class="price">$6.50</p>
-                    <div class="counter">
-                        <button class="minus">-</button>
-                        <span>1</span>
-                        <button class="plus">+</button>
+                <div class="item" data-name="Red Velvet Cake" data-price="4.50">
+                    <div class="item-img">
+                        <img class="food-img" src="./img/Item Image (6).png" alt="Waffle with Berries">
+                        <button class="add-to-cart">Add to Cart</button> 
+                        <div class="counter-btn">
+                            <button class="minus">-</button>
+                            <span>1</span>
+                            <button class="plus">+</button>
+                        </div>
+                    </div>
+                    <div class="text">
+                        <h3>Red Velvet Cake</h3>
+                        <p class="price">$4.50</p>
                     </div>
                 </div>
-                <div class="item" data-name="Vanilla Bean Crème Brûlée" data-price="7.00">
-                    <img src="./img/Item Image (2).png" alt="Crème Brûlée">
-                    <button class="add-to-cart">Add to Cart</button>
-                    <h3>Vanilla Bean Crème Brûlée</h3>
-                    <p class="price">$7.00</p>
-                    <div class="counter">
-                        <button class="minus">-</button>
-                        <span>1</span>
-                        <button class="plus">+</button>
+                <div class="item" data-name="Salted Caramel Brownie" data-price="5.50">
+                    <div class="item-img">
+                        <img class="food-img" src="./img/Item Image (7).png" alt="Waffle with Berries">
+                        <button class="add-to-cart">Add to Cart</button> 
+                        <div class="counter-btn">
+                            <button class="minus">-</button>
+                            <span>1</span>
+                            <button class="plus">+</button>
+                        </div>
                     </div>
-                </div>       <div class="item" data-name="Waffle with Berries" data-price="6.50">
-                    <img src="./img/Item Image (1).png" alt="Waffle with Berries">
-                    <button class="add-to-cart">Add to Cart</button>
-                    <h3>Waffle with Berries</h3>
-                    <p class="price">$6.50</p>
-                    <div class="counter">
-                        <button class="minus">-</button>
-                        <span>1</span>
-                        <button class="plus">+</button>
+                    <div class="text">
+                        <h3>Salted Caramel Brownie</h3>
+                        <p class="price">$5.50</p>
                     </div>
                 </div>
-                <div class="item" data-name="Vanilla Bean Crème Brûlée" data-price="7.00">
-                    <img src="./img/Item Image (2).png" alt="Crème Brûlée">
-                    <button class="add-to-cart">Add to Cart</button>
-                    <h3>Vanilla Bean Crème Brûlée</h3>
-                    <p class="price">$7.00</p>
-                    <div class="counter">
-                        <button class="minus">-</button>
-                        <span>1</span>
-                        <button class="plus">+</button>
+                <div class="item" data-name="Vanilla Panna Cotta" data-price="6.50">
+                    <div class="item-img">
+                        <img class="food-img" src="./img/Item Image (8).png" alt="Waffle with Berries">
+                        <button class="add-to-cart">Add to Cart</button> 
+                        <div class="counter-btn">
+                            <button class="minus">-</button>
+                            <span>1</span>
+                            <button class="plus">+</button>
+                        </div>
                     </div>
-                </div>       <div class="item" data-name="Waffle with Berries" data-price="6.50">
-                    <img src="./img/Item Image (1).png" alt="Waffle with Berries">
-                    <button class="add-to-cart">Add to Cart</button>
-                    <h3>Waffle with Berries</h3>
-                    <p class="price">$6.50</p>
-                    <div class="counter">
-                        <button class="minus">-</button>
-                        <span>1</span>
-                        <button class="plus">+</button>
-                    </div>
-                </div>
-                <div class="item" data-name="Vanilla Bean Crème Brûlée" data-price="7.00">
-                    <img src="./img/Item Image (2).png" alt="Crème Brûlée">
-                    <button class="add-to-cart">Add to Cart</button>
-                    <h3>Vanilla Bean Crème Brûlée</h3>
-                    <p class="price">$7.00</p>
-                    <div class="counter">
-                        <button class="minus">-</button>
-                        <span>1</span>
-                        <button class="plus">+</button>
+                    <div class="text">
+                        <h3>Vanilla Panna Cotta</h3>
+                        <p class="price">$6.50</p>
                     </div>
                 </div>
             </div>
         </div>
         <div class="cart">
             <h2>Your Cart (<span id="cart-count">0</span>)</h2>
-            <ul id="cart-items"></ul>
+            <ul id="cart-items">
+                <img class="img-cace" src="./img/Empty Illustration.svg" alt="">
+            </ul>
             <p><strong>Total:</strong> $<span id="total-price">0.00</span></p>
             <button id="confirm-order">Confirm Order</button>
         </div>
-        <!-- Modal overlay -->
-<div id="order-modal" class="modal">
-    <div class="modal-content">
-        <span class="close-btn">&times;</span>
-        <h2>Order Confirmed</h2>
-        <p>We hope you enjoy your food!</p>
-        <ul id="order-summary"></ul>
-        <p><strong>Order Total: $<span id="order-total"></span></strong></p>
-        <button id="new-order">Start New Order</button>
-    </div>
-</div>
+
+        <div id="order-modal" class="modal">
+            <div class="modal-content">
+                <span class="close-btn">&times;</span>
+                <h2>Order Confirmed</h2>
+                <p>We hope you enjoy your food!</p>
+                <ul id="order-summary"></ul>
+                <p><strong>Order Total: $<span id="order-total"></span></strong></p>
+                <a href="index.html"><button id="new-order">Start New Order</button></a>
+            </div>
+        </div>
 
     </div>
     </div>
     <script src="main.js"></script>
 </body>
-</html>
 
- 
+</html>
