--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="item" data-name="Waffle with Berries" data-price="6.50">
                     <div class="item-img">
                         <img class="food-img" src="./img/Item Image.png" alt="Waffle with Berries">
-                        <button class="add-to-cart">Add to Cart</button> 
+                        <button class="add-to-cart">Add to Cart</button>
                         <div class="counter-btn">
                             <button class="minus">-</button>
                             <span>1</span>
@@ -31,8 +31,8 @@
                 </div>
                 <div class="item" data-name="Vanilla Bean Crème Brûlée" data-price="7.00">
                     <div class="item-img">
-                        <img class="food-img" src="./img/Item Image (1).png" alt="Waffle with Berries">
-                        <button class="add-to-cart">Add to Cart</button> 
+                        <img class="food-img" src="./img/Item Image (1).png" alt="Vanilla Bean Crème Brûlée">
+                        <button class="add-to-cart">Add to Cart</button>
                         <div class="counter-btn">
                             <button class="minus">-</button>
                             <span>1</span>
@@ -46,8 +46,8 @@
                 </div>
                 <div class="item" data-name="Macaron Mix of Five" data-price="8.00">
                     <div class="item-img">
-                        <img class="food-img" src="./img/Item Image (2).png" alt="Waffle with Berries">
-                        <button class="add-to-cart">Add to Cart</button> 
+                        <img class="food-img" src="./img/Item Image (2).png" alt="Macaron Mix of Five">
+                        <button class="add-to-cart">Add to Cart</button>
                         <div class="counter-btn">
                             <button class="minus">-</button>
                             <span>1</span>
@@ -61,8 +61,8 @@
                 </div>
                 <div class="item" data-name="Classic Tiramisu" data-price="5.50">
                     <div class="item-img">
-                        <img class="food-img" src="./img/Item Image (3).png" alt="Waffle with Berries">
-                        <button class="add-to-cart">Add to Cart</button> 
+                        <img class="food-img" src="./img/Item Image (3).png" alt="Classic Tiramisu">
+                        <button class="add-to-cart">Add to Cart</button>
                         <div class="counter-btn">
                             <button class="minus">-</button>
                             <span>1</span>
@@ -76,8 +76,8 @@
                 </div>
                 <div class="item" data-name="Pistachio Baklava" data-price="4.00">
                     <div class="item-img">
-                        <img class="food-img" src="./img/Item Image (4).png" alt="Waffle with Berries">
-                        <button class="add-to-cart">Add to Cart</button> 
+                        <img class="food-img" src="./img/Item Image (4).png" alt="Pistachio Baklava">
+                        <button class="add-to-cart">Add to Cart</button>
                         <div class="counter-btn">
                             <button class="minus">-</button>
                             <span>1</span>
@@ -91,8 +91,8 @@
                 </div>
                 <div class="item" data-name="Lemon Meringue Pie" data-price="5.00">
                     <div class="item-img">
-                        <img class="food-img" src="./img/Item Image (5).png" alt="Waffle with Berries">
-                        <button class="add-to-cart">Add to Cart</button> 
+                        <img class="food-img" src="./img/Item Image (5).png" alt="Lemon Meringue Pie">
+                        <button class="add-to-cart">Add to Cart</button>
                         <div class="counter-btn">
                             <button class="minus">-</button>
                             <span>1</span>
@@ -106,8 +106,8 @@
                 </div>
                 <div class="item" data-name="Red Velvet Cake" data-price="4.50">
                     <div class="item-img">
-                        <img class="food-img" src="./img/Item Image (6).png" alt="Waffle with Berries">
-                        <button class="add-to-cart">Add to Cart</button> 
+                        <img class="food-img" src="./img/Item Image (6).png" alt="Red Velvet Cake">
+                        <button class="add-to-cart">Add to Cart</button>
                         <div class="counter-btn">
                             <button class="minus">-</button>
                             <span>1</span>
@@ -121,8 +121,8 @@
                 </div>
                 <div class="item" data-name="Salted Caramel Brownie" data-price="5.50">
                     <div class="item-img">
-                        <img class="food-img" src="./img/Item Image (7).png" alt="Waffle with Berries">
-                        <button class="add-to-cart">Add to Cart</button> 
+                        <img class="food-img" src="./img/Item Image (7).png" alt="Salted Caramel Brownie">
+                        <button class="add-to-cart">Add to Cart</button>
                         <div class="counter-btn">
                             <button class="minus">-</button>
                             <span>1</span>
@@ -136,8 +136,8 @@
                 </div>
                 <div class="item" data-name="Vanilla Panna Cotta" data-price="6.50">
                     <div class="item-img">
-                        <img class="food-img" src="./img/Item Image (8).png" alt="Waffle with Berries">
-                        <button class="add-to-cart">Add to Cart</button> 
+                        <img class="food-img" src="./img/Item Image (8).png" alt="Vanilla Panna Cotta">
+                        <button class="add-to-cart">Add to Cart</button>
                         <div class="counter-btn">
                             <button class="minus">-</button>
                             <span>1</span>
